--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_main.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/menu_app_bar"
-                app:navigationIcon="@drawable/ic_launcher_foreground"
-                app:title="TITULO" />
+                app:navigationIcon="@drawable/logofinal"
+                app:title="Restaurante de Nacho" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -34,29 +34,17 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coordinatorLayout" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPersonas"
-        android:layout_width="match_parent"
+        android:layout_width="375dp"
 
-        android:layout_height="0dp"
+        android:layout_height="621dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
