--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/menu/menu_app_bar.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/menu/menu_app_bar.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_baseline_search_24"
         android:title="SEARCH"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        android:contentDescription="des2"
+        android:contentDescription="search icon"
         app:showAsAction="ifRoom" />
 
 </menu>
