--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_detailed.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_detailed.xml
@@ -56,11 +56,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Button"
+        android:layout_marginEnd="48dp"
+        android:text="Add!"
         app:layout_constraintBottom_toTopOf="@+id/rvOrders"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tableId"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -75,6 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/tvName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/phoneLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -98,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="Email"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/tvEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/emailLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -125,7 +129,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.105"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/phoneLabel"
@@ -133,10 +138,41 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Phone"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/tvPhone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+
+    <EditText
+        android:id="@+id/tableId"
+        android:layout_width="109dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="9dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/rvOrders"
+        app:layout_constraintStart_toEndOf="@+id/inputTableId"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintVertical_bias="0.952"
+        app:layout_constraintRight_toLeftOf="@id/button"
+        />
+
+    <TextView
+        android:id="@+id/inputTableId"
+        android:layout_width="63dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="6dp"
+        android:text="Table id:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/rvOrders"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintVertical_bias="0.952"
+        app:layout_constraintRight_toLeftOf="@id/tableId"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
