--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/view_order.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/view_order.xml
@@ -4,30 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="30dp"
-    >
-
+    android:layout_marginTop="30dp">
 
 
     <TextView
         android:id="@+id/tvId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="TextView"
-        android:textSize="20sp"
+        android:layout_width="88dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="28dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tvNombre"
+        app:layout_constraintRight_toLeftOf="@id/tvFecha"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="TextView"
+        android:id="@+id/tvFecha"
+        android:layout_width="161dp"
+        android:layout_height="21dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvTableId"
         app:layout_constraintStart_toEndOf="@id/tvId"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvTableId"
+        android:layout_width="123dp"
+        android:layout_height="21dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tvFecha"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
