--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/values/colors.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="deep_purple_500">#673AB7</color>
+    <color name="deep_purple_700">#512DA8</color>
+    <color name="light_blue_500">#03A9F4</color>
+    <color name="light_blue_700">#0288D1</color>
+    <color name="dark_gray">#121212</color>
+    <color name="orange_500">#FFA726</color>
+    <color name="orange_700">#F57C00</color>
+    <color name="green_500">#8BC34A</color>
+    <color name="green_700">#689F38</color>
 </resources>
