--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_main.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,14 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:liftOnScroll="true"
             >
-
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
@@ -26,16 +25,13 @@
                 app:menu="@menu/menu_app_bar"
                 app:navigationIcon="@drawable/logofinal"
                 app:title="Restaurante de Nacho" />
-
         </com.google.android.material.appbar.AppBarLayout>
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPersonas"
-        android:layout_width="375dp"
 
-        android:layout_height="621dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCustomers"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
@@ -44,4 +40,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
