--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/menu/context_bar.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/menu/context_bar.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/more"
-        android:title="MORE"
+        android:title="@string/more"
         android:icon="@android:drawable/ic_menu_delete"
-        android:contentDescription="des1"
+        android:contentDescription="@string/more"
         app:showAsAction="ifRoom" />
 </menu>
