--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/values-night/themes.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme for Dark Mode. -->
-    <style name="Theme.NachoRestaurante" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NachoRestaurante" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/deep_purple_500</item>
         <item name="colorPrimaryVariant">@color/deep_purple_700</item>
